cluster-cd/apps/base/spotify-moderator/service.yaml
---
# Only one service needed for multiple exporters.
# ServiceMonitor will monitor each matched pod.
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: &name spotify-moderator
    app.kubernetes.io/instance: *name
    app.kubernetes.io/part-of: *name
    jobLabel: *name
  name: spotify-moderator
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
  sessionAffinity: None
  type: ClusterIP
